--- a/comicbin/app/views/comics/show.html.erb
+++ b/comicbin/app/views/comics/show.html.erb
@@ -1,13 +1,19 @@
 <div class='row'>
   <div class='col-md-5'>
+	<%= image_tag @comic.image, :class => "image-responsive" %>
     <!-- INSERT COMIC COVER IMAGE HERE WITH ERB.
          ATTACH THE CLASS of 'img-responsive' TO THIS LINK -->
   </div>
   <div class='col-md-7'>
-    <h1><!-- INSERT COMIC BOOK TITLE HERE WITH ERB --></h1>
-    <h4><!-- INSERT COMIC BOOK DESCRIPTION HERE WITH ERB --></h4>
+    <h1><!-- INSERT COMIC BOOK TITLE HERE WITH ERB -->
+		<%= @comic.title %>
+	</h1>
+    <h4><!-- INSERT COMIC BOOK DESCRIPTION HERE WITH ERB -->
+		<%= @comic.description %>
+	</h4>
     <!-- INSERT LINK TO DELETE A COMIC BOOK HERE.
          ATTACH A CLASS of 'btn btn-warning' TO THIS LINK.
          ALSO INCLUDE A CONFIRMATION MESSAGE 'Are you sure?' -->
+		<%= link_to "Delete Comic", "/comics/delete/#{@comic.id}", class: 'btn btn-warning' %>
   </div>
 </div>
