--- a/comicbin/app/views/comics/new.html.erb
+++ b/comicbin/app/views/comics/new.html.erb
@@ -4,8 +4,26 @@
 
 <div class='row'>
   <!-- RENDER THE FORM PARTIAL HERE. -->
+  <div class="col-md-6">
+    <form action="/comics/create">
+      <div class="form-group">
+        <label for="title">Title:</label>
+        <input type="text" name="title" class="form-control" id="title" placeholder="Enter title">
+      </div>
+      <div class="form-group">
+        <label for="image">Image:</label>
+        <input type="text" name="image" class="form-control" id="image" placeholder="Enter image URL">
+      </div>
+      <div class="form-group">
+        <label for="description">Description:</label>
+        <input type="text" name="description" class="form-control" id="description" placeholder="Enter description">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+
+  </div>
 </div>
 
 <div class='container'>
-  <%= link_to 'Back to all comics', comics_path %>
+  <%= link_to 'Back to all comics', "/comics" %>
 </div>
